Replace next32() and next8() with stream32()
Add utility functions to convert uint32 buffers to uint8 LE/BE.
This simplifies the API by a lot. ISAAC works on 32-bit integers, so
it also provide the output in this format. If the user wants, they can
convert the values into whatever format they desire.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,8 @@ include_directories(tst/ tst/atto/)
 set(TEST_FILES
         tst/test.c
         tst/test_init.c
-        tst/test_next.c
+        tst/test_stream.c
+        tst/test_convert.c
         tst/atto/atto.c)
 
 add_library("isaac" STATIC ${LIB_FILES})
