Add untested 64-bit ISAAC version
- Taken from isaac64.c and isaac64.h original implementation
- Renamed pretty much everything in the API to avoid having the
  number 32 in the names of the functions. This allows to have the same
  API names regardless of the implementation. The only change is in the
  uint32_t vs. uint64_t data types

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,8 @@ set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} \
         -funroll-loops")
 
 include_directories(inc/)
-set(LIB_FILES src/isaac.c)
+set(LIB32_FILES src/isaac.c)
+set(LIB64_FILES src/isaac64.c)
 include_directories(tst/ tst/atto/)
 set(TEST_FILES
         tst/test.c
@@ -49,8 +50,10 @@ set(TEST_FILES
         tst/test_convert.c
         tst/atto/atto.c)
 
-add_library("isaac" STATIC ${LIB_FILES})
-add_executable("testisaac" ${LIB_FILES} ${TEST_FILES})
+add_library("isaac32" STATIC ${LIB32_FILES})
+add_library("isaac64" STATIC ${LIB64_FILES})
+add_executable("testisaac32" ${LIB32_FILES} ${TEST_FILES})
+add_executable("testisaac64" ${LIB64_FILES} ${TEST_FILES})
 
 include_directories(tst/original/)
 add_executable("generatevectors"
