Add test running with ctest command

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -212,3 +212,9 @@ if (DOXYGEN_FOUND)
 else (DOXYGEN_FOUND)
     message(WARNING "Doxygen not found. Cannot generate documentation.")
 endif (DOXYGEN_FOUND)
+
+enable_testing()
+add_test(testisaac32 COMMAND ./testisaac32)
+add_test(testisaac64 COMMAND ./testisaac64)
+add_test(testisaac32shared COMMAND ./testisaac32shared)
+add_test(testisaac64shared COMMAND ./testisaac64shared)
