Fix ctest command syntax, add MinSizeRel build and test

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -25,6 +25,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
+        BUILD_TYPE: [Release, MinSizeRel]
 
     steps:
       - uses: actions/checkout@v2
@@ -32,14 +33,14 @@ jobs:
       - name: Configure CMake on ${{ matrix.os }}
         # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
         # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{matrix.os.BUILD_TYPE}}
 
       - name: Build on ${{ matrix.os }}
         # Build your program with the given configuration
-        run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --parallel 8 --clean-first
+        run: cmake --build ${{github.workspace}}/build --config ${{matrix.os.BUILD_TYPE}} --parallel 8 --clean-first
 
       - name: Test on ${{ matrix.os }}
         working-directory: ${{github.workspace}}/build
         # Execute tests defined by the CMake configuration.
         # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-        run: ctest -C ${{env.BUILD_TYPE}} --output-on-failure
+        run: ctest --output-on-failure
