Fix syntax of add_test() clause in CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -214,7 +214,7 @@ else (DOXYGEN_FOUND)
 endif (DOXYGEN_FOUND)
 
 enable_testing()
-add_test(testisaac32 COMMAND ./testisaac32)
-add_test(testisaac64 COMMAND ./testisaac64)
-add_test(testisaac32shared COMMAND ./testisaac32shared)
-add_test(testisaac64shared COMMAND ./testisaac64shared)
+add_test(NAME testisaac32 COMMAND testisaac32)
+add_test(NAME testisaac64 COMMAND testisaac64)
+add_test(NAME testisaac32shared COMMAND testisaac32shared)
+add_test(NAME testisaac64shared COMMAND testisaac64shared)
