--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -36,6 +36,7 @@ jobs:
         run: ctest --output-on-failure
 
   # Separate job for Windows, as it requires the MSYS installation beforehand
+  # and the enforcing of the CMake generator to be MinGW makefiles.
   # Inspired by from https://ariya.io/2020/07/on-github-actions-with-msys2
   build_and_test_windows:
     runs-on: windows-latest
@@ -48,7 +49,6 @@ jobs:
           - gcc
           - clang
         msystem:
-          - MINGW32
           - MINGW64
     defaults:
       run:
@@ -59,23 +59,17 @@ jobs:
       - uses: msys2/setup-msys2@v2
         with:
           msystem: ${{ matrix.msystem }}
-          install: make cmake
-      - name: install the compiler with Msys2
-        run: pacman --noconfirm -S mingw-w64-i686-gcc
-        if: ${{ (matrix.msystem == 'MINGW32') && (matrix.compiler == 'gcc') }}
-      - name: install the compiler with Msys2
-        run: pacman --noconfirm -S mingw-w64-x86_64-gcc
-        if: ${{ (matrix.msystem == 'MINGW64') && (matrix.compiler == 'gcc') }}
-      - name: install the compiler with Msys2
-        run: pacman --noconfirm -S mingw-w64-i686-clang
-        if: ${{ (matrix.msystem == 'MINGW32') && (matrix.compiler == 'clang') }}
-      - name: install the compiler with Msys2
-        run: pacman --noconfirm -S mingw-w64-x86_64-clang
-        if: ${{ (matrix.msystem == 'MINGW64') && (matrix.compiler == 'clang') }}
+          install: mingw-w64-x86_64-cmake mingw-w64-x86_64-make
+      - name: install GCC
+        run: pacman --no-confirm -S mingw-w64-x86_64-gcc
+        if: ${{ ${{matrix.compiler}} == 'gcc' }}
+      - name: install Clang
+        run: pacman --no-confirm -S mingw-w64-x86_64-clang
+        if: ${{ ${{matrix.compiler}} == 'clang' }}
       - name: Check the compiler version
         run: ${{ matrix.compiler }} --version
       - name: Configure CMake
-        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{matrix.build_type}} -DCMAKE_C_COMPILER=${{matrix.compiler}}
+        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{matrix.build_type}} -DCMAKE_C_COMPILER=${{matrix.compiler}} -G "MinGW Makefiles"
       - name: Build
         run: cmake --build ${{github.workspace}}/build --parallel 8 --clean-first
       - name: Test
