--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -59,7 +59,7 @@ jobs:
       - uses: msys2/setup-msys2@v2
         with:
           msystem: ${{ matrix.msystem }}
-          install: mingw-w64-x86_64-cmake mingw-w64-x86_64-make
+          install: mingw-w64-x86_64-cmake make
       - name: install GCC
         if: matrix.compiler == 'gcc'
         run: pacman --noconfirm -S mingw-w64-x86_64-gcc
@@ -69,7 +69,6 @@ jobs:
       - name: Check the compiler version
         run: |
           cmake --version
-          make --version
           ${{ matrix.compiler }} --version
       - name: Configure CMake
         run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{matrix.build_type}} -DCMAKE_C_COMPILER=${{matrix.compiler}} -G "MinGW Makefiles"
