--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -35,8 +35,7 @@ jobs:
         working-directory: ${{github.workspace}}/build
         run: ctest --output-on-failure
 
-  # Separate job for Windows, as it requires the MSYS installation beforehand
-  # and the enforcing of the CMake generator to be MinGW makefiles.
+  # Separate job for Windows, as it requires the MSYS installation beforehand.
   # Inspired by from https://ariya.io/2020/07/on-github-actions-with-msys2
   build_and_test_windows:
     runs-on: windows-latest
@@ -71,7 +70,7 @@ jobs:
           cmake --version
           ${{ matrix.compiler }} --version
       - name: Configure CMake
-        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{matrix.build_type}} -DCMAKE_C_COMPILER=${{matrix.compiler}} -G "MinGW Makefiles"
+        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{matrix.build_type}} -DCMAKE_C_COMPILER=${{matrix.compiler}}
       - name: Build all targets
         run: cmake --build ${{github.workspace}}/build --parallel 8 --clean-first
       - name: Test with Atto
