--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -70,9 +70,9 @@ jobs:
           cmake --version
           ${{ matrix.compiler }} --version
       - name: Configure CMake
-        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{matrix.build_type}} -DCMAKE_C_COMPILER=${{matrix.compiler}}
+        run: cmake -B /C/build -DCMAKE_BUILD_TYPE=${{matrix.build_type}} -DCMAKE_C_COMPILER=${{matrix.compiler}}
       - name: Build all targets
-        run: cmake --build ${{github.workspace}}/build --parallel 8 --clean-first
+        run: cmake --build /C/build --parallel 8 --clean-first
       - name: Test with Atto
-        working-directory: ${{github.workspace}}/build
+        working-directory: /C/build
         run: ctest --output-on-failure
