--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -70,7 +70,7 @@ jobs:
           cmake --version
           ${{ matrix.compiler }} --version
       - name: Configure CMake
-        run: cmake -B /C/build -DCMAKE_BUILD_TYPE=${{matrix.build_type}} -DCMAKE_C_COMPILER=${{matrix.compiler}}
+        run: cmake -B /C/build -DCMAKE_BUILD_TYPE=${{matrix.build_type}} -DCMAKE_C_COMPILER=${{matrix.compiler}} -G "MSYS Makefiles";
       - name: Build all targets
         run: cmake --build /C/build --parallel 8 --clean-first
       - name: Test with Atto
